--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,10 @@ dependencies {
 
     implementation 'org.apache.opennlp:opennlp:2.2.0'
 
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'org.json:json:20090211'
+
+
     // Rx
     implementation "io.reactivex.rxjava2:rxjava:2.2.9"
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
